# synththing

./: README.md  meson.build
docs/: grammar.ebnf
src/: main.cpp
